syntax = "proto3";

option csharp_namespace = "Project.CommunicateService.Protos";

service CommunicationService  {
  rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse);
}
message CreateRoomRequest  {
  string UserID = 1;
  string DoctorID = 2;
}
message CreateRoomResponse  {
  string RoomID = 1;
}
